Fixed: Slider text being too large for the box / area

--- a/site-sass/components/slick-styling.scss
+++ b/site-sass/components/slick-styling.scss
@@ -80,7 +80,7 @@
 h2.header-text-area {
   font-family: Georgia;
   font-weight: 300;
-  font-size: 39px;
+  font-size: 29px;
   color: $uni-blue;
   margin-bottom: 20px;
   overflow-wrap: break-word;
